fix: flash messages z-index

--- a/app/assets/stylesheets/flash.css
+++ b/app/assets/stylesheets/flash.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 1rem;
   right: 1rem;
-  z-index: 50;
+  z-index: 2100;
   background-color: var(--tokyo-bg-tertiary);
   border: 1px solid;
   min-width: 300px;
